<resources>
    <string name="app_name">Weather</string>

    <string-array name="Country_array">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Jaipur</item>
        <item>Raipur</item>
        <item>Delhi</item>
        <item>Baroda</item>
        <item>Chennai</item>
        <item>Nandurbar</item>
        <item>Nashik</item>
        <item>Lonavala</item>
        <item>Solapur</item>
        <item>Nagpur</item>
        <item>Shimla</item>
        <item>Shrinagar</item>
        <item>Jammu</item>
    </string-array>
    <string name="dash"> -- </string>
    <string name="Temp_Max"> Temp_Max:=</string>
    <string name="Temp_Min"> Temp_Min:= </string>
    <string name="Wind"> Wind:=</string>
    <string name="Humidity">Humidity:=</string>
    <string name="Pressure">Pressure:=</string>
    <string name="Sunrise">Sunrise:=</string>
    <string name="Sunset">Sunset:=</string>

</resources>
